# ep-sim

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.mac.yml  docker-compose.yml
ros2_ws/: frames_2026-07-16_16.28.25.gv  frames_2026-07-16_16.41.22.gv
ros2_ws/src/robomaster_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robomaster_bringup/config/: sim_controllers.yaml  tether_controllers.yaml  twist_mux.yaml
ros2_ws/src/robomaster_bringup/launch/: bringup.launch.py  control.launch.py  description.launch.py
ros2_ws/src/robomaster_bringup/robomaster_bringup/: cmd_vel_mux.py
ros2_ws/src/robomaster_bringup/scripts/: cmd_vel_mux.py
ros2_ws/src/robomaster_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/robomaster_camera/launch/: camera.launch.py
ros2_ws/src/robomaster_camera/robomaster_camera/: camera_node.py  video_stream.py
ros2_ws/src/robomaster_description/urdf/: arm.urdf.xacro  base.urdf.xacro  camera.urdf.xacro  extension.urdf.xacro  gimbal.urdf.xacro  gripper.urdf.xacro  intelligent_controller.urdf.xacro  led.urdf.xacro  robomaster_ep.urdf.xacro  robomaster_s1.urdf.xacro  ros2_control.urdf.xacro  tof.urdf.xacro  wheel.urdf.xacro
ros2_ws/src/robomaster_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/robomaster_detection/config/: tags_36h11.yaml
ros2_ws/src/robomaster_detection/launch/: detection.launch.py
ros2_ws/src/robomaster_detection/robomaster_detection/: tag_overlay_node.py
ros2_ws/src/robomaster_driver/: CMakeLists.txt  package.xml  robomaster_driver.xml
ros2_ws/src/robomaster_driver/config/: tether_controllers.yaml
ros2_ws/src/robomaster_driver/include/robomaster_driver/: hardware_interface.hpp  tcp_client.hpp
ros2_ws/src/robomaster_driver/launch/: tether.launch.py
ros2_ws/src/robomaster_driver/scripts/: stream_view.py
ros2_ws/src/robomaster_driver/src/: connection_test.cpp  hardware_interface.cpp  tcp_client.cpp
ros2_ws/src/robomaster_driver/urdf/: ros2_control.urdf.xacro
ros2_ws/src/robomaster_gazebo/: package.xml
ros2_ws/src/robomaster_gazebo/launch/: bringup.launch.py  sim.launch.py  spawn.launch.py  tether.launch.py
