<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robomaster_detection</name>
  <version>0.0.1</version>
  <description>AprilTag detection and debug overlay for the RoboMaster EP.

    Interprets pixels; acquiring them is robomaster_camera's job (real robot) or
    the Gazebo camera sensor's (sim). Consumes the /camera/image_raw +
    /camera/camera_info pair and depends on neither producer, so it can't tell
    them apart and doesn't need to.</description>
  <maintainer email="ardusa05@gmail.com">Ardusa</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
